new icons: Yandex & Yandex.Start

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -121,3 +121,15 @@ yandex_team_calendar:
 
 yandex_courier:
   - com.yandex.courier/com.yandex.courier.MainActivity
+
+yandex:
+  - com.yandex.searchapp/ru.yandex.searchplugin.MainActivity
+  - com.yandex.searchapp.beta/ru.yandex.searchplugin.MainActivity
+
+yandex_alt_1: {}
+
+yandex_start:
+  - ru.yandex.searchplugin/ru.yandex.searchplugin.MainActivity
+  - ru.yandex.searchplugin.beta/ru.yandex.searchplugin.MainActivity
+
+yandex_start_alt_1: {}
