misc: fix compinfo for Auto.ru

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -108,7 +108,7 @@ yandex_direct:
   - ru.yandex.direct/ru.yandex.direct.newui.splash.SplashActivity
 
 auto_ru:
-  - ru.auto.araru.auto.ara.SplashActivity
+  - ru.auto.ara/ru.auto.ara.SplashActivity
 
 yandex_cloud:
   - ru.yandex.cloud/ru.yandex.cloud.pages.MainActivity
