rename icon: Yandex.Edadeal -> Edadeal

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -12,7 +12,7 @@
 evie_reader:
   - com.lenntt.evoicereader/com.lenntt.evoicereader.ui.MainActivity
 
-yandex_edadeal:
+edadeal:
   - com.edadeal.android/com.edadeal.android.ui.main.MainActivity
 
 yandex_zen:
