new compinfo: Yandex.Disk

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -133,3 +133,7 @@ yandex_start:
   - ru.yandex.searchplugin.beta/ru.yandex.searchplugin.MainActivity
 
 yandex_start_alt_1: {}
+
+yandex_disk:
+  - ru.yandex.disk/ru.yandex.disk.DefaultIcon
+  - ru.yandex.disk.beta/ru.yandex.disk.DefaultIcon
