new compinfo: Yandex.Eats

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -137,3 +137,6 @@ yandex_start_alt_1: {}
 yandex_disk:
   - ru.yandex.disk/ru.yandex.disk.DefaultIcon
   - ru.yandex.disk.beta/ru.yandex.disk.DefaultIcon
+
+yandex_eats:
+  - ru.foodfox.client/ru.foodfox.client.eats.MainActivity
