new compinfo: Yandex.Keyboard

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -140,3 +140,6 @@ yandex_disk:
 
 yandex_eats:
   - ru.foodfox.client/ru.foodfox.client.eats.MainActivity
+
+yandex_keyboard:
+  - ru.yandex.androidkeyboard/com.android.inputmethod.latin.setup.SetupYandexKeyboardActivityAlias
