misc: add Alt 1 for Yandex.Pay

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -101,6 +101,8 @@ yandex_meteum:
 yandex_pay:
   - com.yandex.bank/com.yandex.bank.screens.MainActivity
 
+yandex_pay_alt_1: {}
+
 yandex_appmetrica:
   - ru.yandex.mobile.appmetrica/ru.yandex.metrica.ui.PreloaderActivity
 
