--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -56,7 +56,7 @@ yandex_tickets:
 yandex_fuel:
   - ru.yandex.mobile.gasstations/ru.yandex.mobile.gasstations.view.launch.NewYearLauncher
 
-yandex_map_editor:
+yandex_maps_editor:
   - com.yandex.maps.mrcpublic/com.yandex.maps.mrcpublic.activities.SplashScreenActivity
 
 yandex_realty:
