new icon: Yandex.Market Partners

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -145,3 +145,6 @@ yandex_eats:
 
 yandex_keyboard:
   - ru.yandex.androidkeyboard/com.android.inputmethod.latin.setup.SetupYandexKeyboardActivityAlias
+
+yandex_market_partner:
+  - ru.yandex.market.partner/ru.yandex.market.partner.MainActivity
