new icon: Yandex.Smena

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -148,3 +148,6 @@ yandex_keyboard:
 
 yandex_market_partner:
   - ru.yandex.market.partner/ru.yandex.market.partner.MainActivity
+
+yandex_smena:
+  - com.yandex.bluecollars/ru.yandex.taximeter.yandex_driver.MainActivity
