new icon: Yandex.Talk

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -151,3 +151,6 @@ yandex_market_partner:
 
 yandex_smena:
   - com.yandex.bluecollars/ru.yandex.taximeter.yandex_driver.MainActivity
+
+yandex_talk:
+  - ru.yandex.subtitles/ru.yandex.subtitles.ui.activity.SplashActivity
