new icon: Yandex.Practicum

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -154,3 +154,6 @@ yandex_smena:
 
 yandex_talk:
   - ru.yandex.subtitles/ru.yandex.subtitles.ui.activity.SplashActivity
+
+yandex_practicum:
+  - ru.yandex.practicum.flutter_practicum/ru.yandex.practicum.flutter_practicum.MainActivity
