new icon: That's You

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -157,3 +157,6 @@ yandex_talk:
 
 yandex_practicum:
   - ru.yandex.practicum.flutter_practicum/ru.yandex.practicum.flutter_practicum.MainActivity
+
+thats_you:
+  - com.playstation.iwyk/com.playstation.iwyk.UnityPlayerActivityWithPS4Discovery
