new icon: VpnHood

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,3 +11,7 @@
 
 clipboard_whitelist:
   - com.github.kr328.clipboard/com.github.kr328.clipboard.MainActivity
+
+vpnhood:
+  - com.vpnhood.client.android/crc647486a17e72a62434.MainActivity
+  - com.vpnhood.client.android/crc64878500d16bb23c1a.MainActivity
