misc: add compinfos for remnant icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -15,3 +15,6 @@ clipboard_whitelist:
 vpnhood:
   - com.vpnhood.client.android/crc647486a17e72a62434.MainActivity
   - com.vpnhood.client.android/crc64878500d16bb23c1a.MainActivity
+
+yandex_market_partners:
+  - ru.yandex.market.partner/ru.yandex.market.partner.MainActivity
