new icon: VkusVill (ВкусВилл)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -18,3 +18,6 @@ vpnhood:
 
 yandex_market_partners:
   - ru.yandex.market.partner/ru.yandex.market.partner.MainActivity
+
+vkusvill:
+  - ru.vkusvill/ru.vkusvill.ui.screens.splash.SplashActivity
