new compinfo: Olive Young

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -21,3 +21,6 @@ yandex_market_partners:
 
 vkusvill:
   - ru.vkusvill/ru.vkusvill.ui.screens.splash.SplashActivity
+
+olive_young:
+  - com.oliveyoung/com.oliveyoung.presentation.ui.home.MainActivity
