new icon: Security Bank

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -24,3 +24,6 @@ vkusvill:
 
 olive_young:
   - com.oliveyoung/com.oliveyoung.presentation.ui.home.MainActivity
+
+security_bank:
+  - com.securitybank.online/com.securitybank.online.app.activity.EntryActivity
