--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,22 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+clipboard_whitelist:
+  - com.github.kr328.clipboard/com.github.kr328.clipboard.MainActivity
+
+vpnhood:
+  - com.vpnhood.client.android/crc647486a17e72a62434.MainActivity
+  - com.vpnhood.client.android/crc64878500d16bb23c1a.MainActivity
+
+yandex_market_partners:
+  - ru.yandex.market.partner/ru.yandex.market.partner.MainActivity
+
+vkusvill:
+  - ru.vkusvill/ru.vkusvill.ui.screens.splash.SplashActivity
+
+olive_young:
+  - com.oliveyoung/com.oliveyoung.presentation.ui.home.MainActivity
+
+security_bank:
+  - com.securitybank.online/com.securitybank.online.app.activity.EntryActivity
