--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -27,3 +27,36 @@ olive_young:
 
 security_bank:
   - com.securitybank.online/com.securitybank.online.app.activity.EntryActivity
+
+atmos_weather:
+  - io.atticusc.atmosweather/io.atticusc.atmosweather.MainActivity
+
+bluemoon:
+  - ch.nilsgrob.android.bluemoon/com.ngrob.android.bluemoon.MainActivity
+
+candle_torch:
+  - com.elasticrock.candle/com.elasticrock.candle.MainActivity
+
+expense_manager:
+  - com.naveenapps.expensemanager/com.naveenapps.expensemanager.MainActivity
+
+fossify_calendar:
+  - org.fossify.calendar/org.fossify.calendar.activities.SplashActivity.Green
+
+fossify_file_manager:
+  - org.fossify.filemanager/org.fossify.filemanager.activities.SplashActivity.Green
+
+ftpclient:
+  - de.qwerty287.ftpclient/de.qwerty287.ftpclient.MainActivity
+
+keyguard:
+  - com.artemchep.keyguard/com.artemchep.keyguard.android.MainActivity
+
+opendtu:
+  - xyz.commanderred.opendtuapp/xyz.commanderred.opendtuapp.MainActivity
+
+open_comic_vine:
+  - org.proninyaroslav.opencomicvine/org.proninyaroslav.opencomicvine.ui.MainActivity
+
+peristyle:
+  - app.simple.peri/app.simple.peri.activities.MainActivity
