--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -60,3 +60,15 @@ open_comic_vine:
 
 peristyle:
   - app.simple.peri/app.simple.peri.activities.MainActivity
+
+colorblendr:
+  - com.drdisagree.colorblendr/com.drdisagree.colorblendr.ui.activities.SplashActivity
+
+ayugram:
+  - org.telegram.messenger/com.exteragram.messenger.DefaultIcon
+
+malwarebytes:
+  - org.malwarebytes.antimalware/org.malwarebytes.antimalware.ui.RoutingActivity
+
+mastodonredirect:
+  - dev.zwander.peertuberedirect/dev.zwander.peertuberedirect.MainActivity
