--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -72,3 +72,21 @@ malwarebytes:
 
 mastodonredirect:
   - dev.zwander.peertuberedirect/dev.zwander.peertuberedirect.MainActivity
+
+apatch:
+  - me.bmax.apatch/me.bmax.apatch.ui.MainActivity
+
+harmonia:
+  - com.kyant.music/com.kyant.music.MainActivity
+
+ludi:
+  - com.mr3y.ludi/com.mr3y.ludi.MainActivity
+
+materialyou_dynamic_island:
+  - fr.angel.dynamicisland/fr.angel.dynamicisland.MainActivity
+
+securify:
+  - io.github.rabahx.securify/io.github.rabahx.securify.ui.activity.MainActivity
+
+videoyoux:
+  - com.videoyou.x/com.videoyou.x.MainActivity
