--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,33 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+barcode_buddy_scanner:
+  - de.bulling.barcodebuddyscanner/de.bulling.barcodebuddyscanner.MainActivity
+
+battarang_notifier:
+  - com.anissan.battarang/com.anissan.battarang.ui.MainActivity
+
+carrion:
+  - us.spotco.carrion/us.spotco.carrion.MainActivity
+
+lingshot:
+  - com.lingshot.languagelearn/com.lingshot.languagelearn.MainActivity
+
+nfc_alarm_clock:
+  - com.nfcalarmclock/com.nfcalarmclock.main.NacMainActivity}
+
+pocket_plan:
+  - com.pocket_plan.j7_003/com.pocket_plan.j7_003.MainActivity
+
+soul_searching:
+  - com.github.enteraname74.soulsearching/com.github.soulsearching.MainActivity
+
+summary_you:
+  - com.talosross.summaryyou/com.talosross.summaryyou.MainActivity
+
+vibrator:
+  - com.lukeneedham.vibrator/com.lukeneedham.vibrator.MainActivity
+
+yokai:
+  - eu.kanade.tachiyomi.yokai/eu.kanade.tachiyomi.ui.main.MainActivity
