--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -38,3 +38,6 @@ vibrator:
 
 yokai:
   - eu.kanade.tachiyomi.yokai/eu.kanade.tachiyomi.ui.main.MainActivity
+
+neo_backup:
+  - com.machiav3lli.backup/com.machiav3lli.backup.activities.MainActivityX
