--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -41,3 +41,21 @@ yokai:
 
 neo_backup:
   - com.machiav3lli.backup/com.machiav3lli.backup.activities.MainActivityX
+
+better_schedule:
+  - cz.vitskalicky.lepsirozvrh/cz.vitskalicky.lepsirozvrh.activity.MainActivity
+
+emerald_dialer:
+  - ru.henridellal.dialer/ru.henridellal.dialer.DialerActivity
+
+free_browser:
+  - org.woheller69.browser/de.baumann.browser.activity.BrowserActivity
+
+mihon:
+  - app.mihon/eu.kanade.tachiyomi.ui.main.MainActivity
+
+partygames:
+  - de.rmrf.partygames/de.rmrf.partygames.MainActivity
+
+stately:
+  - com.lloydtorres.stately/com.lloydtorres.stately.login.LoginActivity
