--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -56,3 +56,6 @@ mihon:
 
 partygames:
   - de.rmrf.partygames/de.rmrf.partygames.MainActivity
+
+dpd:
+  - ru.dpd.recipient/ru.dpd.features.launch.AppActivity
