--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -59,3 +59,6 @@ partygames:
 
 dpd:
   - ru.dpd.recipient/ru.dpd.features.launch.AppActivity
+
+open_workout:
+  - com.health.openworkout/com.health.openworkout.MainActivity
