new icon: Rummikub

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -62,3 +62,6 @@ dpd:
 
 open_workout:
   - com.health.openworkout/com.health.openworkout.MainActivity
+
+rummikub:
+  - com.rummikubfree/com.google.firebase.MessagingUnityPlayerActivity
