new icon: PayZapp

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -65,3 +65,6 @@ open_workout:
 
 rummikub:
   - com.rummikubfree/com.google.firebase.MessagingUnityPlayerActivity
+
+payzapp:
+  - com.hdfcbank.payzapp/com.apollorncontainer.activities.SplashActivity
