new icon: Lalamove

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -68,3 +68,6 @@ rummikub:
 
 payzapp:
   - com.hdfcbank.payzapp/com.apollorncontainer.activities.SplashActivity
+
+lalamove:
+  - hk.easyvan.app.client/com.deliverysdk.app.launcherrouter.LauncherRouterActivity
