new icon: Patelco

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -71,3 +71,6 @@ payzapp:
 
 lalamove:
   - hk.easyvan.app.client/com.deliverysdk.app.launcherrouter.LauncherRouterActivity
+
+patelco:
+  - com.patelco.patelco/com.patelco.patelco.MainActivity
