--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -74,3 +74,6 @@ lalamove:
 
 patelco:
   - com.patelco.patelco/com.patelco.patelco.MainActivity
+
+wtmp:
+  - com.wtmp.svdsoftware/com.wtmp.ui.HostActivity
