new icon: Linux Command Library

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -77,3 +77,6 @@ patelco:
 
 wtmp:
   - com.wtmp.svdsoftware/com.wtmp.ui.HostActivity
+
+linux_command_library:
+  - com.inspiredandroid.linuxcommandbibliotheca/com.inspiredandroid.linuxcommandbibliotheca.MainActivity
