--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -56,3 +56,27 @@ mihon:
 
 partygames:
   - de.rmrf.partygames/de.rmrf.partygames.MainActivity
+
+dpd:
+  - ru.dpd.recipient/ru.dpd.features.launch.AppActivity
+
+open_workout:
+  - com.health.openworkout/com.health.openworkout.MainActivity
+
+rummikub:
+  - com.rummikubfree/com.google.firebase.MessagingUnityPlayerActivity
+
+payzapp:
+  - com.hdfcbank.payzapp/com.apollorncontainer.activities.SplashActivity
+
+lalamove:
+  - hk.easyvan.app.client/com.deliverysdk.app.launcherrouter.LauncherRouterActivity
+
+patelco:
+  - com.patelco.patelco/com.patelco.patelco.MainActivity
+
+wtmp:
+  - com.wtmp.svdsoftware/com.wtmp.ui.HostActivity
+
+linux_command_library:
+  - com.inspiredandroid.linuxcommandbibliotheca/com.inspiredandroid.linuxcommandbibliotheca.MainActivity
