--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -80,3 +80,12 @@ wtmp:
 
 linux_command_library:
   - com.inspiredandroid.linuxcommandbibliotheca/com.inspiredandroid.linuxcommandbibliotheca.MainActivity
+
+fossify_contacts:
+  - org.fossify.contacts/org.fossify.contacts.activities.SplashActivity.Green
+
+fossify_phone:
+  - org.fossify.phone/org.fossify.phone.activities.SplashActivity.Green
+
+musicsearch:
+  - io.github.lydavid.musicsearch/ly.david.mbjc.ui.MainActivity
