--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-	compileSdkVersion rootProject.ext.CompileSdk
+	compileSdk rootProject.ext.CompileSdk
 
 	namespace 'website.leifs.delta'
 
@@ -67,6 +67,6 @@ dependencies {
      * If you've missed some versions you've to also follow update guide for those versions
      */
 
-	playImplementation 'com.github.zixpo:candybar:3.18.4'
-	fossImplementation 'com.github.Donnnno:candybar-foss:3.18.6'
+	playImplementation 'com.github.zixpo:candybar:3.19.0'
+	fossImplementation 'com.github.donnnno:candybar-foss:3.19.0'
 }
