--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,33 +23,23 @@
         android:networkSecurityConfig="@xml/network_config"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/CandyBar.Theme.App"
+        android:theme="@style/Theme.App.Starting"
         tools:targetApi="n">
-
-        <activity
-            android:name=".activities.SplashActivity"
-            android:launchMode="singleTop"
-            android:noHistory="true"
-            android:screenOrientation="portrait"
-            android:theme="@style/CandyBar.Theme.Splash"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <meta-data
-                android:name="android.app.shortcuts"
-                android:resource="@xml/shortcuts" />
-        </activity>
 
         <activity
             android:name=".activities.MainActivity"
             android:launchMode="singleTop"
-            android:exported="true"
-            android:theme="@style/CandyBar.Theme.App"
-            android:configChanges="uiMode|orientation|keyboardHidden|screenSize">
+            android:theme="@style/Theme.App.Starting"
+            android:configChanges="uiMode|orientation|keyboardHidden|screenSize"
+            android:exported="true">
+
+            <meta-data
+                android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
