new icon: Kinobaza

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -89,3 +89,6 @@ fossify_phone:
 
 musicsearch:
   - io.github.lydavid.musicsearch/ly.david.mbjc.ui.MainActivity
+
+kinobaza:
+  - ua.com.kinobaza/ua.com.kinobaza.ui.MainActivity
