icon link: Music Alt 3 -> Music Player, MP3 Player

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -92,3 +92,6 @@ musicsearch:
 
 kinobaza:
   - ua.com.kinobaza/ua.com.kinobaza.ui.MainActivity
+
+music_alt_3:
+  - freemusic.download.musicplayer.mp3player/freemusic.download.musicplayer.mp3player.activities.SplashActivity
