--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -95,3 +95,6 @@ kinobaza:
 
 music_alt_3:
   - freemusic.download.musicplayer.mp3player/freemusic.download.musicplayer.mp3player.activities.SplashActivity
+
+naver:
+  - com.navercorp.game.android.community/com.navercorp.game.android.community.MainActivity
