new icon: Mediolanum

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -98,3 +98,6 @@ music_alt_3:
 
 naver:
   - com.navercorp.game.android.community/com.navercorp.game.android.community.MainActivity
+
+mediolanum:
+  - com.mediolanum.android.fullbanca/it.bmed.ib.mediolanumapp.splashscreen.SplashscreenActivity
