new icon: Birth Control Pill Reminder

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -101,3 +101,6 @@ naver:
 
 mediolanum:
   - com.mediolanum.android.fullbanca/it.bmed.ib.mediolanumapp.splashscreen.SplashscreenActivity
+
+birth_control:
+  - com.devsoldiers.calendar.vesta.pills/com.devsoldiers.calendar.MainActivity
