new icon: Play Geto

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -104,3 +104,6 @@ mediolanum:
 
 birth_control:
   - com.devsoldiers.calendar.vesta.pills/com.devsoldiers.calendar.MainActivity
+
+play_geto:
+  - com.nmp.playgeto/com.nmp.playgeto.NPGIntroActivity
