new icon: LATAM Airlines

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -107,3 +107,6 @@ birth_control:
 
 play_geto:
   - com.nmp.playgeto/com.nmp.playgeto.NPGIntroActivity
+
+latam_airlines:
+  - com.latam.xp/com.latamxpapp.SplashActivity
