new icon: Credit Agricole

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -110,3 +110,6 @@ play_geto:
 
 latam_airlines:
   - com.latam.xp/com.latamxpapp.SplashActivity
+
+credit_agricole:
+  - it.caitalia.apphub/com.creditagricole.MainActivity
