new icon: Cisco AnyConnect

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -113,3 +113,6 @@ latam_airlines:
 
 credit_agricole:
   - it.caitalia.apphub/com.creditagricole.MainActivity
+
+cisco_anyconnect:
+  - com.cisco.anyconnect.vpn.android.avf/com.cisco.anyconnect.ui.PrimaryActivity
