icon link: T Phone -> iCallScreen

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -116,3 +116,6 @@ credit_agricole:
 
 cisco_anyconnect:
   - com.cisco.anyconnect.vpn.android.avf/com.cisco.anyconnect.ui.PrimaryActivity
+
+t_phone:
+  - com.hqinfosystem.callscreen/com.hqinfosystem.callscreen.base.SplashActivity
