new icon: Agen Pulsa Termurah

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -119,3 +119,6 @@ cisco_anyconnect:
 
 t_phone:
   - com.hqinfosystem.callscreen/com.hqinfosystem.callscreen.base.SplashActivity
+
+agen_pulsa_termurah:
+  - web.id.isipulsa.appkita/com.w38s.StartupActivity
