new icon: Aircash

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -122,3 +122,6 @@ t_phone:
 
 agen_pulsa_termurah:
   - web.id.isipulsa.appkita/com.w38s.StartupActivity
+
+aircash:
+  - com.aircash.aircash/com.aircash.features.splash.SplashActivity
