--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -89,3 +89,6 @@ fossify_phone:
 
 musicsearch:
   - io.github.lydavid.musicsearch/ly.david.mbjc.ui.MainActivity
+
+fossify_messages:
+  - org.fossify.messages/org.fossify.messages.activities.SplashActivity.Green
