--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -92,3 +92,6 @@ musicsearch:
 
 fossify_messages:
   - org.fossify.messages/org.fossify.messages.activities.SplashActivity.Green
+
+proton_mail:
+  - ch.protonmail.android/ch.protonmail.android.MainActivity
