new icon: I Am from Gdansk

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -125,3 +125,6 @@ agen_pulsa_termurah:
 
 aircash:
   - com.aircash.aircash/com.aircash.features.splash.SplashActivity
+
+i_am_from_gdansk:
+  - com.qbmobile.karty.jestemzgdanska/com.qbmobile.karty.jestemzgdanska.MainActivity
