new icon: Snoop Finance

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -134,3 +134,6 @@ aircash:
 
 i_am_from_gdansk:
   - com.qbmobile.karty.jestemzgdanska/com.qbmobile.karty.jestemzgdanska.MainActivity
+
+snoop_finance:
+  - app.snoop/app.snoop.ui.feature.launcher.LauncherActivity
