new icon: Fongo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -137,3 +137,6 @@ i_am_from_gdansk:
 
 snoop_finance:
   - app.snoop/app.snoop.ui.feature.launcher.LauncherActivity
+
+fongo:
+  - com.fongo.dellvoice/com.fongo.dellvoice.SplashActivity
