--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -102,7 +102,7 @@ kinobaza:
 music_alt_3:
   - freemusic.download.musicplayer.mp3player/freemusic.download.musicplayer.mp3player.activities.SplashActivity
 
-naver:
+naver_chzzk:
   - com.navercorp.game.android.community/com.navercorp.game.android.community.MainActivity
 
 mediolanum:
