--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -95,3 +95,48 @@ fossify_messages:
 
 proton_mail:
   - ch.protonmail.android/ch.protonmail.android.MainActivity
+
+kinobaza:
+  - ua.com.kinobaza/ua.com.kinobaza.ui.MainActivity
+
+music_alt_3:
+  - freemusic.download.musicplayer.mp3player/freemusic.download.musicplayer.mp3player.activities.SplashActivity
+
+naver_chzzk:
+  - com.navercorp.game.android.community/com.navercorp.game.android.community.MainActivity
+
+mediolanum:
+  - com.mediolanum.android.fullbanca/it.bmed.ib.mediolanumapp.splashscreen.SplashscreenActivity
+
+birth_control:
+  - com.devsoldiers.calendar.vesta.pills/com.devsoldiers.calendar.MainActivity
+
+play_geto:
+  - com.nmp.playgeto/com.nmp.playgeto.NPGIntroActivity
+
+latam_airlines:
+  - com.latam.xp/com.latamxpapp.SplashActivity
+
+credit_agricole:
+  - it.caitalia.apphub/com.creditagricole.MainActivity
+
+cisco_anyconnect:
+  - com.cisco.anyconnect.vpn.android.avf/com.cisco.anyconnect.ui.PrimaryActivity
+
+t_phone:
+  - com.hqinfosystem.callscreen/com.hqinfosystem.callscreen.base.SplashActivity
+
+agen_pulsa_termurah:
+  - web.id.isipulsa.appkita/com.w38s.StartupActivity
+
+aircash:
+  - com.aircash.aircash/com.aircash.features.splash.SplashActivity
+
+i_am_from_gdansk:
+  - com.qbmobile.karty.jestemzgdanska/com.qbmobile.karty.jestemzgdanska.MainActivity
+
+snoop_finance:
+  - app.snoop/app.snoop.ui.feature.launcher.LauncherActivity
+
+fongo:
+  - com.fongo.dellvoice/com.fongo.dellvoice.SplashActivity
