new compinfos: Delta

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,9 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+delta:
+  - website.leifs.delta/website.leifs.delta.activities.MainActivity
+
+delta_alt_2:
+  - website.leifs.delta.foss/website.leifs.delta.activities.MainActivity
