new compinfo: Read You

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,6 @@ delta:
 
 delta_alt_2:
   - website.leifs.delta.foss/website.leifs.delta.activities.MainActivity
+
+read_you:
+  - me.ash.reader/me.ash.reader.infrastructure.android.MainActivity
