new compinfo: Yandex Smart Home

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,6 @@ delta_alt_2:
 
 read_you:
   - me.ash.reader/me.ash.reader.infrastructure.android.MainActivity
+
+yandex_smart_home:
+  - com.yandex.iot/com.yandex.iot.activity.presentation.IotActivity
