--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,17 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+delta:
+  - website.leifs.delta/website.leifs.delta.activities.MainActivity
+
+delta_alt_2:
+  - website.leifs.delta.foss/website.leifs.delta.activities.MainActivity
+
+read_you:
+  - me.ash.reader/me.ash.reader.infrastructure.android.MainActivity
+
+yandex_smart_home:
+  - com.yandex.iot/com.yandex.iot.activity.presentation.IotActivity
+
+mihon_alt_2: {}
