--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -43,3 +43,10 @@ katana:
 
 valv:
   - se.arctosoft.vault/se.arctosoft.vault.LaunchActivity
+
+databackup:
+  - com.xayah.databackup.premium/com.xayah.databackup.SplashActivity
+  - com.xayah.databackup.foss/com.xayah.databackup.SplashActivity
+
+onionshare:
+  - org.onionshare.android.fdroid/org.onionshare.android.ui.MainActivity
