--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -22,3 +22,31 @@ yandex_smart_home:
   - com.yandex.iot/com.yandex.iot.activity.presentation.IotActivity
 
 mihon_alt_2: {}
+
+adclose:
+  - com.close.hook.ads/com.close.hook.ads.MainActivityLauncher
+
+chatbox:
+  - xyz.chatboxapp.chatbox/xyz.chatboxapp.chatbox.MainActivity
+
+cuscon:
+  - com.froxot.cuscon.foss/com.froxot.cuscon.activities.SplashActivity
+
+everyday_tasks:
+  - de.jepfa.personaltasklogger/de.jepfa.personaltasklogger.MainActivity
+
+infusion_timer:
+  - com.sesu8642.infusion_timer/com.sesu8642.infusion_timer.MainActivity
+
+katana:
+  - dev.alvr.katana.beta/dev.alvr.katana.ui.main.MainActivity
+
+valv:
+  - se.arctosoft.vault/se.arctosoft.vault.LaunchActivity
+
+databackup:
+  - com.xayah.databackup.premium/com.xayah.databackup.SplashActivity
+  - com.xayah.databackup.foss/com.xayah.databackup.SplashActivity
+
+onionshare:
+  - org.onionshare.android.fdroid/org.onionshare.android.ui.MainActivity
