Added 1 CompInfo for Sofascore (#786)
* Update new_icons.yaml

* Update new_icons.yaml

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -50,3 +50,6 @@ databackup:
 
 onionshare:
   - org.onionshare.android.fdroid/org.onionshare.android.ui.MainActivity
+
+sofascore:
+  - com.sofascore.results/com.sofascore.results.main.start.StartActivity
