--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -53,3 +53,12 @@ onionshare:
 
 sofascore:
   - com.sofascore.results/com.sofascore.results.main.start.StartActivity
+
+countdate:
+  - cyou.sk5s.app.countdate/cyou.sk5s.app.countdate.MainActivity
+
+leanish:
+  - com.natoboram.leanish/com.natoboram.leanish.MainActivity
+
+redomi:
+  - com.acszo.redomi/com.acszo.redomi.MainActivity
