new icon: Microsoft Copilot

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -62,3 +62,6 @@ leanish:
 
 redomi:
   - com.acszo.redomi/com.acszo.redomi.MainActivity
+
+microsoft_copilot:
+  - com.microsoft.copilot/com.microsoft.sapphire.app.main.SapphireMainActivity
