new icon: Goodnotes

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -65,3 +65,6 @@ redomi:
 
 microsoft_copilot:
   - com.microsoft.copilot/com.microsoft.sapphire.app.main.SapphireMainActivity
+
+goodnotes:
+  - com.goodnotes.android.app/com.goodnotes.android.app.twa.LauncherActivity
