new icon: LIHKG

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -68,3 +68,6 @@ microsoft_copilot:
 
 goodnotes:
   - com.goodnotes.android.app/com.goodnotes.android.app.twa.LauncherActivity
+
+lihkg:
+  - com.lihkg.app/com.lihkg.app.MasterActivity
