new icon: AdVenture Communist

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -71,3 +71,6 @@ goodnotes:
 
 lihkg:
   - com.lihkg.app/com.lihkg.app.MasterActivity
+
+adventure_communist:
+  - com.kongregate.mobile.adventurecommunist.google/com.unity3d.player.UnityPlayerActivity
