icon link: Yandex.Maps Patcher -> Yandex.Maps

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -74,3 +74,6 @@ lihkg:
 
 adventure_communist:
   - com.kongregate.mobile.adventurecommunist.google/com.unity3d.player.UnityPlayerActivity
+
+yandex_maps:
+  - ru.bluecat.yandexmapspatcher/ru.bluecat.yandexmapspatcher.Home
