--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -62,3 +62,18 @@ leanish:
 
 redomi:
   - com.acszo.redomi/com.acszo.redomi.MainActivity
+
+microsoft_copilot:
+  - com.microsoft.copilot/com.microsoft.sapphire.app.main.SapphireMainActivity
+
+goodnotes:
+  - com.goodnotes.android.app/com.goodnotes.android.app.twa.LauncherActivity
+
+lihkg:
+  - com.lihkg.app/com.lihkg.app.MasterActivity
+
+adventure_communist:
+  - com.kongregate.mobile.adventurecommunist.google/com.unity3d.player.UnityPlayerActivity
+
+yandex_maps:
+  - ru.bluecat.yandexmapspatcher/ru.bluecat.yandexmapspatcher.Home
