--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -77,3 +77,6 @@ adventure_communist:
 
 yandex_maps:
   - ru.bluecat.yandexmapspatcher/ru.bluecat.yandexmapspatcher.Home
+
+weather:
+  - net.oneplus.weather/com.oplus.weather.main.view.WeatherMainActivity
