new icon: Zabihah

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -80,3 +80,6 @@ yandex_maps:
 
 weather:
   - net.oneplus.weather/com.oplus.weather.main.view.WeatherMainActivity
+
+zabihah:
+  - com.zabihah.ui/com.zabihah.ui.MainActivity
