new icon: Samsung My Files

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -83,3 +83,6 @@ weather:
 
 zabihah:
   - com.zabihah.ui/com.zabihah.ui.MainActivity
+
+samsung_my_files:
+  - com.sec.android.app.myfiles/com.sec.android.app.myfiles.ui.MainActivity
