new icon: Tradera

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -86,3 +86,6 @@ zabihah:
 
 samsung_my_files:
   - com.sec.android.app.myfiles/com.sec.android.app.myfiles.ui.MainActivity
+
+tradera:
+  - com.tradera/com.tradera.tradera.screens.home.HomeActivity
