new icon: Lyca Mobile

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -89,3 +89,6 @@ samsung_my_files:
 
 tradera:
   - com.tradera/com.tradera.tradera.screens.home.HomeActivity
+
+lyca_mobile:
+  - com.lycamobile.se/com.lycamobile.MainActivity
