--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -92,3 +92,6 @@ tradera:
 
 lyca_mobile:
   - com.lycamobile.se/com.lycamobile.MainActivity
+
+ica:
+  - se.ica.handla/se.ica.handla.launcher.LauncherActivity
