new icon: Scrabble Go

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -95,3 +95,6 @@ lyca_mobile:
 
 ica:
   - se.ica.handla/se.ica.handla.launcher.LauncherActivity
+
+scrabble_go:
+  - com.pieyel.scrabble/com.scopely.unity.ScopelyUnityActivity
