new icon: SL Biljetter

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -104,3 +104,6 @@ bhim:
 
 kivra:
   - com.kivra.Kivra/com.kivra.android.home.HomeActivity
+
+sl_biljetter:
+  - com.sl.SLBiljetter/com.sl.slbiljetter.MainActivity
