new icon: SJ Trains

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -107,3 +107,6 @@ kivra:
 
 sl_biljetter:
   - com.sl.SLBiljetter/com.sl.slbiljetter.MainActivity
+
+sj_trains:
+  - se.sj.android/se.sj.android.activity.SjNavigationDrawer
