new icon: SuperCook

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -110,3 +110,6 @@ sl_biljetter:
 
 sj_trains:
   - se.sj.android/se.sj.android.activity.SjNavigationDrawer
+
+supercook:
+  - com.supercook.app/com.supercook.app.MainActivity
