new icon: Bubble Rainbow Shooter

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -113,3 +113,6 @@ sj_trains:
 
 supercook:
   - com.supercook.app/com.supercook.app.MainActivity
+
+bubble_rainbow_shooter:
+  - com.blackout.bubble/com.google.firebase.MessagingUnityPlayerActivity
