new stuff by ziaee (#789)
* icon link: Weather -> OnePlus Weather

* new icon: Zabihah

* new icon: Samsung My Files

* new icon: Tradera

* new icon: Lyca Mobile

* new icon: ICA

* update icon: Microsoft Launcher

* new icon: Scrabble Go

* new icon: Bhim

* new icon: Kivra

* new icon: SL Biljetter

* new icon: SJ Trains

* new icon: SuperCook

* new icon: Bubble Rainbow Shooter

* new icon: Accenture

* misc: remove Bhim svg/png because it exists in the repo

* misc: remove OnePlus weather icon link

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -77,3 +77,39 @@ adventure_communist:
 
 yandex_maps:
   - ru.bluecat.yandexmapspatcher/ru.bluecat.yandexmapspatcher.Home
+
+zabihah:
+  - com.zabihah.ui/com.zabihah.ui.MainActivity
+
+samsung_my_files:
+  - com.sec.android.app.myfiles/com.sec.android.app.myfiles.ui.MainActivity
+
+tradera:
+  - com.tradera/com.tradera.tradera.screens.home.HomeActivity
+
+lyca_mobile:
+  - com.lycamobile.se/com.lycamobile.MainActivity
+
+ica:
+  - se.ica.handla/se.ica.handla.launcher.LauncherActivity
+
+scrabble_go:
+  - com.pieyel.scrabble/com.scopely.unity.ScopelyUnityActivity
+
+bhim:
+  - in.org.npci.upiapp/mpacjhvlt.n
+
+kivra:
+  - com.kivra.Kivra/com.kivra.android.home.HomeActivity
+
+sl_biljetter:
+  - com.sl.SLBiljetter/com.sl.slbiljetter.MainActivity
+
+sj_trains:
+  - se.sj.android/se.sj.android.activity.SjNavigationDrawer
+
+supercook:
+  - com.supercook.app/com.supercook.app.MainActivity
+
+bubble_rainbow_shooter:
+  - com.blackout.bubble/com.google.firebase.MessagingUnityPlayerActivity
