--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -41,3 +41,15 @@ stundenplan:
 
 xray:
   - io.github.saeeddev94.xray/io.github.saeeddev94.xray.MainActivity
+
+tubular:
+  - org.polymorphicshade.tubular/org.schabi.newpipe.MainActivity
+
+image_toolbox:
+  - ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.presentation.AppActivity
+
+no_icon:
+  - com.k2fsa.sherpa.onnx.tts.engine/com.k2fsa.sherpa.onnx.tts.engine.MainActivity
+
+transdroid:
+  - org.transdroid.full/org.transdroid.core.gui.TorrentsActivity_
