add icons & componentinfo (#791)
* add icons

* add componentinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,48 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+actitime:
+  - com.actimind.actitime/com.actimind.actitime.ui.startup.StartActivity
+
+argenta:
+  - com.sitael.vending/com.sitael.vending.ui.activity.SplashScreenActivity
+
+beatinspector:
+  - io.github.leonidius20.beatinspector/ua.leonidius.beatinspector.MainActivity
+
+dawdle:
+  - godau.fynn.moodledirect/godau.fynn.moodledirect.activity.MainActivity
+
+focal:
+  - ch.mydoli.focal/ch.mydoli.focal.MainActivity
+
+inflation_calculator:
+  - fr.corenting.convertisseureurofranc/fr.corenting.convertisseureurofranc.ConverterActivity
+
+openlib:
+  - com.app.openlib/com.app.openlib.MainActivity
+
+ping_utils:
+  - com.github.axet.pingutils/com.github.axet.pingutils.activities.MainActivity
+
+pushie:
+  - com.chesire.pushie/com.chesire.pushie.MainActivity
+
+stundenplan:
+  - eu.laslo_hauschild.your_schedule/eu.laslo_hauschild.your_schedule.MainActivity
+
+xray:
+  - io.github.saeeddev94.xray/io.github.saeeddev94.xray.MainActivity
+
+tubular:
+  - org.polymorphicshade.tubular/org.schabi.newpipe.MainActivity
+
+image_toolbox:
+  - ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.presentation.AppActivity
+
+no_icon:
+  - com.k2fsa.sherpa.onnx.tts.engine/com.k2fsa.sherpa.onnx.tts.engine.MainActivity
+
+transdroid:
+  - org.transdroid.full/org.transdroid.core.gui.TorrentsActivity_
