update icon: Image Toolbox

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -53,3 +53,6 @@ no_icon:
 
 transdroid:
   - org.transdroid.full/org.transdroid.core.gui.TorrentsActivity_
+
+image_toolbox:
+  - ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.presentation.AppActivity
