update icon: Amnezia VPN

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -56,3 +56,6 @@ transdroid:
 
 image_toolbox:
   - ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.presentation.AppActivity
+
+amnezia_vpn:
+  - org.amnezia.vpn/org.amnezia.vpn.AmneziaActivity
