--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -59,3 +59,6 @@ image_toolbox:
 
 amnezia_vpn:
   - org.amnezia.vpn/org.amnezia.vpn.AmneziaActivity
+
+tatneft:
+  - ru.tatneft.gasstations/ru.tatneft.gasstations.ui.LaunchActivity
