new icon: TNS Energo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -62,3 +62,6 @@ amnezia_vpn:
 
 tatneft:
   - ru.tatneft.gasstations/ru.tatneft.gasstations.ui.LaunchActivity
+
+tns_energo:
+  - ru.tns.tnsmobile/ru.tns.tnsmobile.StartActivity
