--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -53,3 +53,15 @@ no_icon:
 
 transdroid:
   - org.transdroid.full/org.transdroid.core.gui.TorrentsActivity_
+
+image_toolbox:
+  - ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.presentation.AppActivity
+
+amnezia_vpn:
+  - org.amnezia.vpn/org.amnezia.vpn.AmneziaActivity
+
+tatneft:
+  - ru.tatneft.gasstations/ru.tatneft.gasstations.ui.LaunchActivity
+
+tns_energo:
+  - ru.tns.tnsmobile/ru.tns.tnsmobile.StartActivity
