--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -65,3 +65,12 @@ tatneft:
 
 tns_energo:
   - ru.tns.tnsmobile/ru.tns.tnsmobile.StartActivity
+
+alternative_unlock_xposed:
+  - com.leohearts.alternativeUnlockHook/com.leohearts.alternativeUnlockHook.SettingsActivity
+
+md_xiaomi_helper:
+  - com.arlosoft.macrodroid.xiaomiwifihelper/com.arlosoft.macrodroid.xiaomiwifihelper.ui.ConfigureActivity
+
+pastel_wallpapers:
+  - com.arrow.wallpapers.pastelwall/com.arrow.wallpapers.pastelwall.activity.SplashScreen
