Icons for T Life, Bilt Rewards and ComponentInfo for 3 Apps

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -74,3 +74,19 @@ md_xiaomi_helper:
 
 pastel_wallpapers:
   - com.arrow.wallpapers.pastelwall/com.arrow.wallpapers.pastelwall.activity.SplashScreen
+
+capital_one:
+  - com.konylabs.capitalone/com.capitalone.ease.app.splash.SplashActivity
+
+google_sound_amplifier:
+  - com.google.android.accessibility.soundamplifier/com.google.android.accessibility.soundamplifier.LauncherActivity
+
+venmo:
+  - com.venmo/com.venmo.AppExperienceLauncherActivity
+
+bilt_rewards:
+  - com.biltrewards.bilt/com.zoontek.rnbootsplash.RNBootSplashActivity
+
+t_life:
+  - com.tmobile.tuesdays/com.tmobile.tmte.Launcher
+  - com.tmobile.tuesdays/com.telekom.tworld.launcher.main.LauncherActivity
