rename icon: t_life -> t_mobile_life

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -87,6 +87,6 @@ venmo:
 bilt_rewards:
   - com.biltrewards.bilt/com.zoontek.rnbootsplash.RNBootSplashActivity
 
-t_life:
+t_mobile_life:
   - com.tmobile.tuesdays/com.tmobile.tmte.Launcher
   - com.tmobile.tuesdays/com.telekom.tworld.launcher.main.LauncherActivity
