--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -90,3 +90,37 @@ bilt_rewards:
 t_mobile_life:
   - com.tmobile.tuesdays/com.tmobile.tmte.Launcher
   - com.tmobile.tuesdays/com.telekom.tworld.launcher.main.LauncherActivity
+
+
+average_data_usage_widget:
+  - com.trianguloy.continuousDataUsage/com.trianguloy.continuousDataUsage.activities.Main
+
+epyc:
+  - dev.develsinthedetails.eatpoopyoucat/dev.develsinthedetails.eatpoopyoucat.MainActivity
+
+fossify_music_player:
+  - org.fossify.musicplayer/org.fossify.musicplayer.activities.SplashActivity.Green
+
+fwallet:
+  - business.braid.f_wallet/business.braid.f_wallet.MainActivity
+
+install_with_options:
+  - dev.zwander.installwithoptions/dev.zwander.installwithoptions.MainActivity
+
+just_weather:
+  - com.jjewuz.justweather/com.jjewuz.justweather.MainActivity
+
+lose_weight_app_for_men:
+  - menloseweight.loseweightappformen.weightlossformen/menloseweight.loseweightappformen.weightlossformen.activity.SplashActivity
+
+mdgwa:
+  - its.madruga.wpp/its.madruga.wpp.MainActivity
+
+pilipala:
+  - com.guozhigq.pilipala/com.ryanheise.audioservice.AudioServiceActivity
+
+weechat:
+  - com.ubergeek42.WeechatAndroid/com.ubergeek42.WeechatAndroid.WeechatActivity
+
+whobird:
+  - org.woheller69.whobird/org.tensorflow.lite.examples.soundclassifier.DownloadActivity
