--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -124,3 +124,9 @@ weechat:
 
 whobird:
   - org.woheller69.whobird/org.tensorflow.lite.examples.soundclassifier.DownloadActivity
+
+gramophone:
+  - org.akanework.gramophone/org.akanework.gramophone.ui.MainActivity
+
+qksms:
+  - dev.octoshrimpy.quik/dev.octoshrimpy.quik.feature.main.MainActivity
