new compinfo: Arcticons You

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,3 +11,6 @@
 
 brainjogging:
   - de.telefongarten.brainjogging/de.telefongarten.brainjogging.MainActivity
+
+arcticons_you:
+  - com.donnnno.arcticons.you/com.donnnno.arcticons.activities.MainActivity
