new compinfo: Mein O2

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,6 @@ brainjogging:
 
 arcticons_you:
   - com.donnnno.arcticons.you/com.donnnno.arcticons.activities.MainActivity
+
+mein_o2:
+  - canvasm.myo2/com.tuenti.messenger.ui.activity.MainActivity
