new compinfo: Raiffeisen

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,7 @@ arcticons_you:
 
 mein_o2:
   - canvasm.myo2/com.tuenti.messenger.ui.activity.MainActivity
+
+raiffeisen:
+  - cz.rb.app.smartphonebanking/com.zentity.rbcz.composable.activity.UdsLoginActivity
+  - ro.raiffeisen.smartmobile/ro.raiffeisen.smartmobile.presentation.main.LauncherActivity
