icon link: ADB Manager -> ADB Shell

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -21,3 +21,6 @@ mein_o2:
 raiffeisen:
   - cz.rb.app.smartphonebanking/com.zentity.rbcz.composable.activity.UdsLoginActivity
   - ro.raiffeisen.smartmobile/ro.raiffeisen.smartmobile.presentation.main.LauncherActivity
+
+adb_manager:
+  - com.github.standardadb/com.github.standardadb.SplashActivity
