icon link: qBittorrent Remote -> qBitController

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -24,3 +24,6 @@ raiffeisen:
 
 adb_manager:
   - com.github.standardadb/com.github.standardadb.SplashActivity
+
+qbittorrent_remote:
+  - dev.bartuzen.qbitcontroller/dev.bartuzen.qbitcontroller.ui.main.MainActivity
