new compinfo: Pizza Hut

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -27,3 +27,6 @@ adb_manager:
 
 qbittorrent_remote:
   - dev.bartuzen.qbitcontroller/dev.bartuzen.qbitcontroller.ui.main.MainActivity
+
+pizza_hut:
+  - com.pizzahut.canada/com.pizzahut.canada.MainActivity
