new compinfo: CalcES

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -30,3 +30,6 @@ qbittorrent_remote:
 
 pizza_hut:
   - com.pizzahut.canada/com.pizzahut.canada.MainActivity
+
+calces:
+  - advanced.scientific.calculator.calc991.plus/advanced.scientific.calculator.calc991.plus.splash.ytivitcAneercShsalpS_ksvLWSZxEDOdvwaxbGtYQvBnIcAGr_
