--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,28 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+brainjogging:
+  - de.telefongarten.brainjogging/de.telefongarten.brainjogging.MainActivity
+
+arcticons_you:
+  - com.donnnno.arcticons.you/com.donnnno.arcticons.activities.MainActivity
+
+mein_o2:
+  - canvasm.myo2/com.tuenti.messenger.ui.activity.MainActivity
+
+raiffeisen:
+  - cz.rb.app.smartphonebanking/com.zentity.rbcz.composable.activity.UdsLoginActivity
+  - ro.raiffeisen.smartmobile/ro.raiffeisen.smartmobile.presentation.main.LauncherActivity
+
+adb_manager:
+  - com.github.standardadb/com.github.standardadb.SplashActivity
+
+qbittorrent_remote:
+  - dev.bartuzen.qbitcontroller/dev.bartuzen.qbitcontroller.ui.main.MainActivity
+
+pizza_hut:
+  - com.pizzahut.canada/com.pizzahut.canada.MainActivity
+
+calces:
+  - advanced.scientific.calculator.calc991.plus/advanced.scientific.calculator.calc991.plus.splash.ytivitcAneercShsalpS_ksvLWSZxEDOdvwaxbGtYQvBnIcAGr_
