Add new Airalo activity name

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -33,3 +33,6 @@ pizza_hut:
 
 calces:
   - advanced.scientific.calculator.calc991.plus/advanced.scientific.calculator.calc991.plus.splash.ytivitcAneercShsalpS_ksvLWSZxEDOdvwaxbGtYQvBnIcAGr_
+
+airalo:
+  - com.mobillium.airalo/com.airalo.ui.splash.SplashActivity
